# rum

./: .dockerignore  .gitignore  .travis.yml  LICENSE  META.json  Makefile  README.md  TODO  gen_rum_sql--1.0--1.1.pl  gen_rum_sql--1.1--1.2.pl  gen_rum_sql.pl  ginbtree.c  ginbulk.c  gindatapage.c  ginentrypage.c  ginfast.c  ginget.c  gininsert.c  ginscan.c  ginsort.c  ginsort.h  ginutil.c  ginvacuum.c  ginxlog.c  meson.build  regress_schedule  rum--1.0--1.1.sql  rum--1.0.sql  rum--1.1--1.2.sql  rum--1.1.sql  rum--1.2--1.3.sql  rum--1.2.sql  rum--1.3--1.4.sql  rum--1.3.sql  rum--1.4.sql  rum.control  rum.h  rum_init.sql  rum_timestamp.c  rum_ts_utils.c  (+14 more)
data/: rum.data  rum_weight.data  tsts.data
docs/: README.md
expected/: altorder.out  altorder_1.out  altorder_2.out  altorder_hash.out  altorder_hash_1.out  altorder_hash_2.out  anyarray.out  array.out  array_1.out  array_2.out  array_3.out  bit.out  bytea.out  char.out  cidr.out  date.out  expr.out  float4.out  float8.out  float8_1.out  inet.out  int2.out  int4.out  int8.out  int8_1.out  int8_2.out  interval.out  limits.out  macaddr.out  money.out  money_1.out  numeric.out  oid.out  orderby.out  orderby_1.out  orderby_hash.out  orderby_hash_1.out  predicate-rum-2.out  predicate-rum-2_1.out  predicate-rum-2_2.out  (+22 more)
results/: rum.out
specs/: predicate-rum-2.spec  predicate-rum.spec
sql/: altorder.sql  altorder_hash.sql  anyarray.sql  array.sql  bit.sql  bytea.sql  char.sql  cidr.sql  date.sql  expr.sql  float4.sql  float8.sql  inet.sql  int2.sql  int4.sql  int8.sql  interval.sql  limits.sql  macaddr.sql  money.sql  numeric.sql  oid.sql  orderby.sql  orderby_hash.sql  rum.sql  rum_debug_funcs.sql  rum_hash.sql  rum_vacuum.sql  rum_validate.sql  rum_weight.sql  ruminv.sql  security.sql  text.sql  time.sql  timestamp.sql  timetz.sql  tmp.sql  varbit.sql  varchar.sql
src/: btree_rum.c  disable_core_macro.h  rum.h  rum_arr_utils.c  rum_debug_funcs.c  rum_timestamp.c  rum_ts_utils.c  rumbtree.c  rumbulk.c  rumdatapage.c  rumentrypage.c  rumfast.c  rumget.c  ruminsert.c  rumscan.c  rumsort.c  rumsort.h  rumtidbitmap.c  rumtidbitmap.h  rumtsquery.c  rumutil.c  rumvacuum.c  rumvalidate.c  tf_idf.c  tuplesort10.c  tuplesort11.c  tuplesort12.c  tuplesort13.c  tuplesort14.c  tuplesort15.c  tuplesort16.c  tuplesort96.c
src/tidbitmap/: tidbitmap12.c  tidbitmap13.c  tidbitmap14.c  tidbitmap15.c  tidbitmap16.c  tidbitmap17.c  tidbitmap18.c
t/: 001_wal.pl  002_pglist.pl  003_rum_debug_funcs.pl
tests/: README.md  pglist_tests.py
travis/: Dockerfile.in  docker-compose.yml  mk_dockerfile.sh  run_tests.sh
